Perform project cleanup